fix visual bug in safari where alias text is invisible

--- a/src/Umbraco.Web.UI.Client/src/less/components/umb-locked-field.less
+++ b/src/Umbraco.Web.UI.Client/src/less/components/umb-locked-field.less
@@ -21,7 +21,7 @@
 }
 
 input.umb-locked-field__input {
-  background: transparent;
+  background: rgba(255, 255, 255, 0); // if using transparent it will hide the text in safari
   border: none;
   font-size: 13px;
   padding: 0;
